--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "marked": "^0.8.2",
     "parcel-bundler": "^1.12.4",
     "typescript": "^3.8.3"
   },
